added google api for panorama view, added locations.json file that includes some random locations

--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,17 @@ body {
   text-align: center;
 }
 
+#pano {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+}
+
+
 #p5canvas {
-  /* position: relative; */
+  position: relative;
+  bottom: 0;
   z-index: 20;
   bottom: 0;
 }
