--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@ body {
   padding: 0;
 }
 
-#container {
+#cnt {
   display: inline-block;
   width: 100%;
-  height: 50%;
+  height: 100%;
   margin: 0;
   background: black;
   position: relative;
@@ -19,10 +19,6 @@ body {
 #pano {
   height: 100%;
   width: 100%;
-}
-
-#map {
-  cursor: crosshair;
 }
 
 #pano {
